2002-11-14  Darin Adler  <darin@apple.com>

	- fixed 3101191 -- REGRESSION: Hang loading excite.com

        * kjs/date_object.cpp:
        (mktimeUsingCF): Pick an arbitrary cutoff of 3000, and return -1 if the
	year passed in is that big so we don't infinite loop. Also validate the
	rest of the date with CFGregorianDateIsValid. 
        (DateProtoFuncImp::call): Handle a -1 result from mktime.
        (DateObjectImp::construct): Check for NaN before calling mktime, and also
	handle a -1 result from mktime.
        (DateObjectFuncImp::call): Check for NaN before calling mktime, and also
	handle a -1 result from mktime.

2002-11-13  Darin Adler  <darin@apple.com>

	- fixed 3099930 -- dates/times without time zones are parsed as UTC by kjs,
	local time by other browsers

        * kjs/date_object.cpp:
        (DateProtoFuncImp::call): Handle the NaN case better, like Mozilla and OmniWeb.
        (DateObjectFuncImp::call): Return NaN rather than Undefined() for bad dates.
        (KJS::parseDate): Return NaN rather than Undefined() or 0 for bad dates.
        (KJS::KRFCDate_parseDate): Return -1 rather than 0 for bad dates.
	Assume local time if no time zone is passed. Don't return 1 if we parse 0.

2002-11-13  Darin Adler  <darin@apple.com>

        - fixed 3073230 -- JavaScript time calls do I/O by lstat()ing /etc/localtime

        * kjs/date_object.cpp:
        (formatDate): Added.
        (formatTime): Added.
        (formatLocaleDate): Added.
        (formatLocaleTime): Added.
        (DateProtoFuncImp::call): Changed to use the above functions instead of
	using strftime.

2002-11-08  Darin Adler  <darin@apple.com>

        * kjs/date_object.cpp:
        (ctimeUsingCF): Added.
        (timeUsingCF): Added.

2002-11-07  Darin Adler  <darin@apple.com>

        * kjs/date_object.cpp: (mktimeUsingCF): Fix storage leak.

2002-11-07  Maciej Stachowiak  <mjs@apple.com>

	- partial fix to 3073230 - JavaScript time calls do I/O by
	lastat()ing /etc/localtime
	